# CMake version
CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

# Project
PROJECT(openwebtorrent-tracker)

# Add a compiler flag
SET(CMAKE_CC_COMPILER /usr/bin/gcc-8)
SET(CMAKE_CXX_COMPILER /usr/bin/g++-8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -DLIBUS_USE_OPENSSL -lssl -lcrypto -lstdc++")

# Dependencies
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
SET(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/deps")

FIND_PACKAGE(Threads)
FIND_PACKAGE(uWebSockets REQUIRED)

# uWebsockets
INCLUDE_DIRECTORIES(${UWEBSOCKETS_INCLUDE_DIR})

# JSON
INCLUDE_DIRECTORIES(${CMAKE_PREFIX_PATH}/json/single_include/nlohmann)
#ADD_SUBDIRECTORY(${CMAKE_PREFIX_PATH}/json)

# Libraries
SET(LIBRARIES
	${CMAKE_THREAD_LIBS_INIT}
	${UWEBSOCKETS_LIBRARIES}
)

# Executable
FILE(GLOB_RECURSE HEADERS src/*.h)
FILE(GLOB_RECURSE SOURCES src/*.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
